@@ -115,7 +115,7 @@ def check_oracle_sessions(item, params, parsed):
 
         state = 0
         warn, crit = None, None
-        if "sessions_abs" in params:
+        if "sessions_abs" in params and not params["sessions_abs"] == None:
             warn, crit = params["sessions_abs"]
             if sessions >= crit:
                 state = 2
@@ -124,6 +124,7 @@ def check_oracle_sessions(item, params, parsed):
             if state:
                 infotext += " (warn/crit at %d/%d)" % (warn, crit)
         yield state, infotext, [ ("sessions", sessions, warn, crit, 0, sessions_max) ]
+
         return
 
     # In case of missing information we assume that the login into
