@@ -54,6 +54,7 @@
     * 3914 FIX: Roles: Aliases are now unique during cloning
     * 3820 FIX: Network scan: no longer fails completely if hostname already exists in configuration...
     * 3821 FIX: WATO Network Scan: Fixed risk of loosing site tags when performing a network scan...
+    * 3951 FIX: oracle_sessions: fixed bug with default absolute levels...
 
     Notifications:
     * 3957 mail: now allows extra HTML section between body and table
